--- a/Lecture-22/Templating/views/random.ejs
+++ b/Lecture-22/Templating/views/random.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('./partials/header') %>
+<%- include("./partials/navbar") %>
 
     <!-- <h1>My favourite random Number <%= "hello".toUpperCase()  %>  </h1> -->
     <h1>My favourite random Number <%= randomNum %>  </h1>
@@ -18,5 +11,6 @@
    <% }%>
 
 
-</body>
-</html>
+<%- include('./partials/footer') %>
+
+
