--- a/Lecture-22/Templating/views/todos.ejs
+++ b/Lecture-22/Templating/views/todos.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('./partials/header') %>
+<%- include("./partials/navbar") %>
 
     <h1>My Todos</h1>
 
@@ -20,6 +13,6 @@
         <%}%>
     </ul>
 
+<%- include('./partials/footer') %>
+
     
-</body>
-</html>
