--- a/Lecture-29/E-Commerce-v2/views/layouts/boilerplate.ejs
+++ b/Lecture-29/E-Commerce-v2/views/layouts/boilerplate.ejs
@@ -7,6 +7,7 @@
     <title>Shopping Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/star.css">
 </head>
 <body>
 
