--- a/Lecture-34/E-Commerce-v6/views/products/show.ejs
+++ b/Lecture-34/E-Commerce-v6/views/products/show.ejs
@@ -15,11 +15,15 @@
                 <h5 class="card-title">$ <%= product.price %> </h5>
                 <a href="#" class="btn btn-success btn-sm">Buy</a>
                 <a href="#" class="btn btn-secondary btn-sm">Add To Cart</a>
-                <a href="/products/<%=product._id%>/edit" class="btn btn-info btn-sm">Edit</a>
-                <form class="d-inline-block" action="/products/<%=product._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-sm btn-danger">Delete</button>
-                </form>
-                </div>
+                    
+                <% if(currentUser && currentUser.role ==='seller') {%>
+                    <a href="/products/<%=product._id%>/edit" class="btn btn-info btn-sm">Edit</a>
+                    <form class="d-inline-block" action="/products/<%=product._id%>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                <% } %> 
+                
+            </div>
             </div>
         </div>
         <div class="col-lg-4 reviews-section mx-auto my-2">
