--- a/Lecture-36/E-Commerce-v8/views/products/index.ejs
+++ b/Lecture-36/E-Commerce-v8/views/products/index.ejs
@@ -11,7 +11,7 @@
   <div class="row products">
       <%for(let product of products){%>
           <div class="col-lg-3 col-md-6 mb-3">
-              <div class="card shadow-sm mx-auto position-relative" style="width: 20rem;">
+              <div class="card  mx-auto position-relative" style="width: 20rem;">
                   <img src="<%=product.img%>" class="card-img-top" alt="item image">
                   <span class="badge rounded-pill bg-light text-dark w-25 position-absolute translate-middle-y" style="top:41%;left:5%"><%=product.avgRating%>  &star; | <%=product.reviews.length%></span>
                   <div class="card-body">
